[project]
name = "odmt"
version = "0.1.0"
description = "OpenSCAD DXF Merge (and clean) Tool"
authors = [
    {name = "Tim Molteno",email = "tim@molteno.net"}
]
license = {text = "GPLv3"}
readme = "README.md"
requires-python = ">=3.10,<4.0"
dependencies = [
    "ezdxf (>=1.3.5,<2.0.0)"
]

[tool.poetry]

[tool.poetry.scripts]
odmt = "odmt.odmt:odmt_cli"

[tool.poetry.group.dev.dependencies]
tbump = "^6.11.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
